--- a/src/components/layout/MainLayout/styles.module.css
+++ b/src/components/layout/MainLayout/styles.module.css
@@ -2,13 +2,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 100vw;
     gap: 1rem;
   }
   
   .main {
-    width: 100vw;
+    width: 100%;
     min-height: 75vh ;
-    margin-top: 5rem;
+    margin-top: 1rem;
     padding: 5rem 0;
 
   }
