--- a/src/pages/NotFound/styles.module.css
+++ b/src/pages/NotFound/styles.module.css
@@ -1,4 +1,8 @@
 .wrapper {
-    min-height: 60vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 70vh;
     text-align: center;
+
 }
